--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@import url(root.css);
+@import url(./root.css);
 @import url("https://fonts.googleapis.com/css2?family=Science+Gothic:wght@100..900&display=swap");
 
 * {
